// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MediaDetails > movie matches snapshot 1`] = `
<div>
  <div
    class="max-w-6xl mx-auto p-6"
  >
    <div
      class="flex flex-col md:flex-row gap-8 mb-8"
    >
      <div
        class="w-full md:w-1/3"
      >
        <img
          alt=""
          class="rounded-lg shadow-lg w-full"
          height="400"
          id="media-poster"
          role="img"
          src="https://image.tmdb.org/t/p/w500/m6FQtqoIP7JUqc9hRwQQfuYG2kz.jpg"
          width="250"
        />
      </div>
      <div
        class="w-full md:w-2/3"
      >
        <h1
          class="text-4xl font-bold mb-4"
        >
          Spoiler Alert
        </h1>
        <div
          class="flex flex-wrap gap-4 mb-4 text-gray-600"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              class="lucide lucide-calendar"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
            <span>
              2022
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <svg
              class="lucide lucide-clock"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
            <span>
              110 mins
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <svg
              class="lucide lucide-star text-yellow-500"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
              />
            </svg>
            <span>
              7
              /10
            </span>
          </div>
        </div>
        <div
          class="mb-4"
        >
          <div
            class="flex items-center gap-2 mb-2"
          >
            <svg
              class="lucide lucide-tag"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
              />
              <circle
                cx="7.5"
                cy="7.5"
                fill="currentColor"
                r=".5"
              />
            </svg>
            <h2
              class="text-xl font-semibold"
            >
              Genres
            </h2>
          </div>
          <div
            class="flex flex-wrap gap-2"
          >
            <div
              class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-sm"
            >
              Romance
            </div>
            <div
              class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-sm"
            >
              Comedy
            </div>
            <div
              class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-sm"
            >
              Drama
            </div>
          </div>
        </div>
        <div
          class="mb-6"
        >
          <h2
            class="text-xl font-semibold mb-2"
          >
            Overview
          </h2>
          <p
            class="text-gray-700 leading-relaxed"
          >
            Journalist Michael Ausiello embarks on a rollercoaster ride of emotions when Kit Cowan, his partner of 14 years, is diagnosed with terminal cancer.
          </p>
        </div>
      </div>
    </div>
    <section>
      <h2
        class="text-2xl font-bold mb-6 flex items-center gap-2"
      >
        <svg
          class="lucide lucide-film"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M7 3v18"
          />
          <path
            d="M3 7.5h4"
          />
          <path
            d="M3 12h18"
          />
          <path
            d="M3 16.5h4"
          />
          <path
            d="M17 3v18"
          />
          <path
            d="M17 7.5h4"
          />
          <path
            d="M17 16.5h4"
          />
        </svg>
        Cast
      </h2>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/mAd6FtZ4AcWSTYcDbK74pupWjIu.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Jim Parsons
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Michael Ausiello
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/d1pgHejpa14TGZ0F5yp3F9DB7Sy.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Ben Aldridge
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Kit Cowan
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/iMeq1j9Xwvaf6PbTJ0FQz69fpuA.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Sally Field
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Marilyn
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/bAV5qsljgiHQkn3QluB5clVYC13.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Bill Irwin
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Bob
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/uH90fGfLLzYCX02yOW3kH4LMO7n.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Josh Pais
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Scott
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/veqSHbQJKrRWfVfDftVJIgDGnZ7.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Antoni Porowski
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Sebastian
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/1UrvslAV9FOF82Hh9A96kgfVaT1.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Nikki M. James
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Nina
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/acpniNyt7JnrDHaUiSO88DAhw6M.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Jeffery Self
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Nick
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/cCSQ3X9aue69JD8SVlwG00wrqzs.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Tara Summers
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Mrs. Ausiello
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/5H3MuzHfSUXVFN5V0i2fB5mkJFG.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Winslow Bright
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Kelly Roswell
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/4Z4jfdMPzhn93rXC1B9O0plWO5C.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Allegra Heart
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Franny
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/8zN1RRlGutESqCwhUcPrhxEqCUP.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Sadie Scott
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Kirby
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/fo8dnSVTho9aB59ZON4QFj8PSk8.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Scott Burik
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Taxi Driver
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/1HL2BjEzlADKg3qydhkAMNDjbny.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Supriya Ganesh
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Make-Up Artist
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Eleni Yiovas
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Night Nurse
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/6z18ps74TiVIFaF5tITaVIlJFNs.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Shunori Ramanathan
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Dr. Lucas
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Kate Pittard
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Candace Baker
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/dIMlOMW4gvpsSBTZNoNF3I7pkqi.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Paco Lozano
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Judge
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Christine Renee Miller
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Ruth
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/b1EZQKMhInZd0ue1C2rMh9N7iyD.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Erica Cho
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Dr. Vogt
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Brody Caines
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Young Michael
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`MediaDetails > tv matches snapshot 1`] = `
<div>
  <div
    class="max-w-6xl mx-auto p-6"
  >
    <div
      class="flex flex-col md:flex-row gap-8 mb-8"
    >
      <div
        class="w-full md:w-1/3"
      >
        <img
          alt=""
          class="rounded-lg shadow-lg w-full"
          height="400"
          id="media-poster"
          role="img"
          src="https://image.tmdb.org/t/p/w500/ooBGRQBdbGzBxAVfExiO8r7kloA.jpg"
          width="250"
        />
      </div>
      <div
        class="w-full md:w-2/3"
      >
        <h1
          class="text-4xl font-bold mb-4"
        >
          The Big Bang Theory
        </h1>
        <div
          class="flex flex-wrap gap-4 mb-4 text-gray-600"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              class="lucide lucide-calendar"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
            <span>
              2007
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <svg
              class="lucide lucide-star text-yellow-500"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
              />
            </svg>
            <span>
              7.9
              /10
            </span>
          </div>
        </div>
        <div
          class="mb-4"
        >
          <div
            class="flex items-center gap-2 mb-2"
          >
            <svg
              class="lucide lucide-tag"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
              />
              <circle
                cx="7.5"
                cy="7.5"
                fill="currentColor"
                r=".5"
              />
            </svg>
            <h2
              class="text-xl font-semibold"
            >
              Genres
            </h2>
          </div>
          <div
            class="flex flex-wrap gap-2"
          >
            <div
              class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-sm"
            >
              Comedy
            </div>
          </div>
        </div>
        <div
          class="mb-6"
        >
          <h2
            class="text-xl font-semibold mb-2"
          >
            Overview
          </h2>
          <p
            class="text-gray-700 leading-relaxed"
          >
            Physicists Leonard and Sheldon find their nerd-centric social circle with pals Howard and Raj expanding when aspiring actress Penny moves in next door.
          </p>
        </div>
      </div>
    </div>
    <section>
      <h2
        class="text-2xl font-bold mb-6 flex items-center gap-2"
      >
        <svg
          class="lucide lucide-film"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M7 3v18"
          />
          <path
            d="M3 7.5h4"
          />
          <path
            d="M3 12h18"
          />
          <path
            d="M3 16.5h4"
          />
          <path
            d="M17 3v18"
          />
          <path
            d="M17 7.5h4"
          />
          <path
            d="M17 16.5h4"
          />
        </svg>
        Cast
      </h2>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/gkwMiwHX7lmfjORRJi6T6SM3ppo.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Johnny Galecki
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Leonard Hofstadter
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/mAd6FtZ4AcWSTYcDbK74pupWjIu.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Jim Parsons
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Sheldon Cooper
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/c01Ma8Jrr2OJ6uoikPwDK34Y8eK.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Kaley Cuoco
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Penny
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/zGrQSfQEw0vO6otWdSXiBHfwv7S.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Simon Helberg
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Howard Wolowitz
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/o58v195EJs4U4whNLqyoIh7Qzef.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Kunal Nayyar
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Rajesh Koothrappali
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/pYcQdUodRdZLpDM2FA0LhW5KhkF.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Melissa Rauch
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Bernadette Rostenkowski
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-xl border bg-card text-card-foreground shadow overflow-hidden"
        >
          <div
            class="flex flex-col sm:flex-row"
          >
            <img
              alt=""
              class="w-full h-64 sm:w-32 sm:h-32 object-cover"
              height="128"
              id="cast-profile-image"
              role="img"
              src="https://image.tmdb.org/t/p/w500/kPsafWVc5H565iTuwS85LtDvvsf.jpg"
              width="128"
            />
            <div
              class="p-4 flex-1"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-2"
              >
                <h3
                  class="font-semibold text-lg"
                >
                  Mayim Bialik
                </h3>
              </div>
              <p
                class="text-gray-600 font-medium mb-2"
              >
                as 
                Amy Farrah Fowler
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
